[package]
name = "ezrtc-server"
version = "0.2.0"
authors = ["Lőrik Levente <levminer@levminer.com>"]
edition = "2021"
license = "MIT"
description = "Easy-to-use wrapper for WebRTC DataChannels peer-to-peer connections written in Rust."
repository = "https://github.com/levminer/ezrtc"
keywords = ["webrtc", "datachannel", "peer-to-peer", "p2p"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
wasm-peers-protocol = "0.3" 
futures-util = "0.3.21"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.8"
simplelog = "0.12.0"
log = "0.4.8"
anyhow = "1"
axum = { version = "0.6.18", features = ["ws", "macros", "json"] }
