[package]
name = "ezrtc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Easy-to-use wrapper for WebRTC DataChannels peer-to-peer connections written in Rust."
repository = "https://github.com/levminer/ezrtc"
keywords = ["webrtc", "datachannel", "peer-to-peer", "p2p"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
url = "2.2.2"
tokio = { version = "1.14.0", features = ["full"] }
futures-util = "0.3.21"
tokio-tungstenite = {version = "0.21", features = ["rustls-tls-native-roots"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-peers-protocol = "0.3"
webrtc = "0.10.1"
tokio-stream = "0.1.14"
log = "0.4.21"
simplelog = "0.12.2"
