[package]
name = "ezrtc"
version = "0.5.0"
authors = ["Lőrik Levente <levminer@levminer.com>"]
edition = "2021"
license = "MIT"
description = "Easy cross-platform WebRTC communication with data channels and a simple signaling server."
repository = "https://github.com/levminer/ezrtc"
keywords = ["webrtc", "datachannel", "peer-to-peer", "p2p"]
categories = ["network-programming", "web-programming"]
readme = "README.md"

[dependencies]
url = "2.2.2"
tokio = { version = "1.14.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webrtc = { version = "0.12"}
log = "0.4.21"
simplelog = "0.12.2"
ezsockets = { version = "0.6.4", features = ["rustls"] }
async-trait = "0.1.52"
